--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.sandipbhattacharya.graphicsdesign.spacegame"
+        applicationId "com.GD.spaceshooter"
         minSdk 21
         targetSdk 31
         versionCode 1
