--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sandipbhattacharya.spaceshooter">
+    package="com.GD.spaceshooter">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-        <activity android:name=".StartUp"
+        <activity android:name="com.GD.spaceshooter.StartUp"
             android:exported="true"
             android:screenOrientation="landscape">
             <intent-filter>
@@ -18,10 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity android:name="com.GD.spaceshooter.MainActivity"
             android:screenOrientation="landscape">
         </activity>
-        <activity android:name=".GameOver"
+        <activity android:name="com.GD.spaceshooter.GameOver"
             android:screenOrientation="landscape">
         </activity>
     </application>
